New in version 1.2.2 (xxx 2009)
 * New date relationships for date tagging.

New in version 1.2.1 (3 November 2009)
 * Provide optional Penn-Treebank-compatible POS tagging.
 * Bug fixes for misc mis-identified POS tags
 * Bug fix for mis-identified advmod relation.
 * Improved word features, including comparative, superlative tagging, etc.
   IMPORTANT: This *requires* link-grammar-4.6.5 or newer!
 * Fix crash on opencog output module, on comparative sentences.
 * Fix: string substitution of "be" in frame rules (Fabricio)
 * Fix: correctly pass variable nodes to opencog (Fabricio)
 * Fix: printing of variables in the "simple view" (Fabricio)
 * Fix: misc pet-embodiment frame rule changes (Fabricio)
 * Move subscript-based feature tagging out of java code into algs file.
 * Remove usage of isPastTenseForm(), in favor of verb subscripts.
 * Fix: Fallback sentence splitter will use standard Java API.

New in version 1.2.0 (12 October 2009)
 * Fixes DocSpliter fallback to behave when it is misconfigured.
 * Fixes for anaphora resolution; head-word was missing or mis-identified.
 * Fix crash when the distributed parser (remote parser) returns null.
 * Don't print the phrase string in the OpenCog server, it messes the output!
 * Fix issuing of _amod when superlative modifier is involved.
 * Fix OpenCog Frame output to include truth values (Fabricio)
 * Change OpenCog Frame output to hold frame references (Fabricio)
 * Frames: add new concept vars and production rules. (Fabricio)
 * Use PrepositionalRelationNode in OpenCog prep relation output.
 * Tag verbs of questions as hypothetical.
 * Explicitly identify "filler subjects" aka "expletives"
 * Identify parataxis clauses.
 * Sort parses into ranked order.
 * Remove % from _%quantity relation name.
 * Remove garbage generated for certain prepositional sentences.
 * Remove garbage generated for certain questions, e.g. "Where is the ball?"
 * Fix cases where direct, indirect object reversed.