@@ -1,5 +1,7 @@
-How many years did it last?
+I offered him 5 shekels for the lot.
 END.
+That cost two dollars.
+How many years did it last?
 It lasted five years.
 It happened in the 1940's.
 It happened on December 3rd, 1990.
