@@ -1,5 +1,6 @@
 New in version 1.2.2 (xxx 2009)
  * New date relationships for date tagging.
+ * Fix: use of quantity in money expressions.
 
 New in version 1.2.1 (3 November 2009)
  * Provide optional Penn-Treebank-compatible POS tagging.
